[gd_scene load_steps=9 format=3 uid="uid://baqmvvfqhai86"]

[ext_resource type="Script" uid="uid://4gqanhdjxji5" path="res://info_window/info_profile_container.gd" id="1_q5yuy"]
[ext_resource type="Theme" uid="uid://1y31veihu3xb" path="res://ui/themes/inventory_arrow_texture.tres" id="1_rpd7b"]
[ext_resource type="Texture2D" uid="uid://5q0w1ca1wujb" path="res://assets/gui/inventory_gui/arrow_up.png" id="2_q5yuy"]
[ext_resource type="Texture2D" uid="uid://dl4um4aatrdih" path="res://assets/gui/inventory_gui/arrow_down.png" id="4_elu2m"]

[sub_resource type="InputEventKey" id="InputEventKey_q5yuy"]
keycode = 4194320

[sub_resource type="Shortcut" id="Shortcut_gs5s0"]
events = [SubResource("InputEventKey_q5yuy")]

[sub_resource type="InputEventKey" id="InputEventKey_elu2m"]
device = -1
keycode = 4194322

[sub_resource type="Shortcut" id="Shortcut_5fma4"]
events = [SubResource("InputEventKey_elu2m")]

[node name="ProfileContainer" type="MarginContainer"]
custom_minimum_size = Vector2(64, 0)
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
script = ExtResource("1_q5yuy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 5

[node name="NameContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 2

[node name="NameLabel" type="RichTextLabel" parent="VBoxContainer/NameContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
bbcode_enabled = true
text = "Han Noah
"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="PortraitContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PortraitContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/PortraitContainer/VBoxContainer"]
layout_mode = 2

[node name="PrevProfileButton" type="Button" parent="VBoxContainer/PortraitContainer/VBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("1_rpd7b")
shortcut = SubResource("Shortcut_gs5s0")
shortcut_in_tooltip = false
icon = ExtResource("2_q5yuy")

[node name="PortraitTexture" type="TextureRect" parent="VBoxContainer/PortraitContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 4

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer/PortraitContainer/VBoxContainer"]
layout_mode = 2

[node name="NextProfileButton" type="Button" parent="VBoxContainer/PortraitContainer/VBoxContainer/CenterContainer2"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("1_rpd7b")
shortcut = SubResource("Shortcut_5fma4")
shortcut_in_tooltip = false
icon = ExtResource("4_elu2m")

[connection signal="pressed" from="VBoxContainer/PortraitContainer/VBoxContainer/CenterContainer/PrevProfileButton" to="." method="_on_prev_profile_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PortraitContainer/VBoxContainer/CenterContainer2/NextProfileButton" to="." method="_on_next_profile_button_pressed"]
